[#1449] Switch to Java 21
 - update PDE prefs accordingly
 - fix deprecations caused by the upgrade